fix slide-navigation spacing for mobile

--- a/less/widget-slideshow.less
+++ b/less/widget-slideshow.less
@@ -341,13 +341,12 @@
 
 .slide-navigation {
     @media @mobile {
+        display: inline-block;
         position: relative;
         width: 100%;
         height: 40px;
         min-height: inherit;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center;
+        text-align: center;
         .previous-button,
         .next-button,
         .pause-toggle {
